Fix spacing, clean up repeated code, fix space issue (\xa0)

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -14,7 +14,7 @@
     position: relative;
 }
 
-.typewriter-text {
+#typewriter-text {
     top: 50%;
     left: 50%;
     font-family: verdana, helvetica, sans-serif;
